$Id: ChangeLog,v 1.160 2007-10-27 12:29:04 cmatsuoka Exp $

Stable versions
---------------

2.4.1 ():
	- fixed portamento after keyoff problem in metamorph_part_ii.xm
	  where new note is not recognized (reported by Adric Riedel)
	- implement Protracker-style sample loops: first play entire sample,
	  then play the loop (needed to play MeNoWantMiseria.mod correctly,
	  reported by Adric Riedel)
	- fixed finetune test in UNIC Tracker detection to prevent false
	  positive with all that she wants.mod (reported by Adric Riedel)
	- fixed test for ?CHN and ??CH TakeTracker/FastTracker2 modules

2.4.0 (20071025):
	- added Oktalyzer note slide and fine note slide effects
	- added Oktalyzer arpeggio 3, arpeggio 4 and arpeggio 5 effects
	- added MED synth programmable arpeggio commands ARP and ARE
	- added MED synth vibrato commands VBS, VBD and VWF
	- added module probe method without loading (Audacious plugin can
	  test for files while a module is playing)
	- added persistent effects for 669, FNK and FAR
	- fixed MED synth volume slide commands CHD and CHU
	- fixed detuning in short samples with bidirectional loop by adjusting
	  the loop size to match forward loop size
	- fixed sound cut bug when changing samples in the MED synth (don't
	  reset channel on attempt to set invalid sample position)
	- fixed identification of IIgs MegaTracker modules
	- fixed 669 persistent vibrato and portamento effects
	- fixed FAR persistent vibrato/portamento and pattern break effects
	- fixed sample loading in FAR modules
	- fixed multi-retrig effect processing (see cyberculosis.xm ch 7)
	- fixed segfault when output file is specified but driver isn't
	- fixed XM sample loop size in XMs made with Digitrakker
	- revert CoreAudio driver pause patch (fix memory management problem)
	- reset MED synth program at each new note event
	- removed filesize-based module format detection
	- replaced XANN loader with Prowizard XANN depacker